--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login – SPC Reports</title>
+  <title>Login – DS Reports</title>
   <link rel="icon" type="image/png" href="/uploads/MultyLogo.png" />
   <link
     rel="stylesheet"
@@ -41,7 +41,7 @@
 <body>
 
     <div id="loginBox">
-        <h2 class="headingg">Multycomm Reports</h2>
+        <h2 class="headingg">DSouth Reports</h2>
         <div id="errorBox" class="notification is-danger is-light is-hidden"></div>
         <form id="loginForm">
         <div class="field">
